add comment api to backend
